# swagger.json
@@ -606,11 +606,6 @@
         "tags": [
           "Celulares"
         ],
-        "security": [
-          {
-            "Bearer": []
-          }
-        ],
         "parameters": [
           {
             "name": "celular",
